# text_me_keras

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: code_formatting.yml  run_tests.yml
tests/: test_callbacks.py  test_text_me_keras.py
text_me_keras/callbacks/: texting.py
text_me_keras/messaging/: sms.py
