[tool.poetry]
name = "text_me_keras"
version = "0.1.0"
description = "A TenosorFlow callback that texts you back (to let you know how training is going)."
authors = ["Daniel Varoli <daniel.varoli@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
tensorflow = "^2.8.0"
twilio = "^7.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
